# movie-recs

./: .gitignore  Procfile  README.md  app.py  conftest.py  launch.py  pyproject.toml  pytest.ini  requirements.txt  server.py  sim.0  test.py  test_app.py  test_model.py
app/: app.py  config.json  model.py  test_app.py  view.py
app/data/: ebert.dict  ebert.lda  ebert.lda.id2word  ebert.lda.state  movie_tags.csv
app/static/: style.css
app/templates/: all.html  base.html  home.html  macros.html  movie.html  search.html  tagged.html
design/: search_app.ui  site1.html  site_home.html  site_results.html
movie_lists/: clean_movies.py  horror_movies.csv  horror_movies.txt  romance_movies.csv  romance_movies.txt  thriller_movies.csv  thriller_movies.txt  thrillers.csv
recommender/: config.json  config.yaml  model.py  view.py
recommender/data/: ebert.lda.expElogbeta.npy
reviews/: get_reviews.py  review_lda.py
static/: style.css
templates/: base.html  home.html  search.html
